# dictfunc

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: build_docs.yml  pypi_publish.yml
docs/: conf.py  index.rst
doctrees/: dictfunc.doctree  environment.pickle  index.doctree  modules.doctree
html/: .buildinfo  dictfunc.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_modules/: index.html
html/_modules/dictfunc/: dictfunc.html
html/_sources/: dictfunc.rst.txt  modules.rst.txt
html/_static/: documentation_options.js
src/dictfunc/: __init__.py  dictfunc.py
src/template/: __init__.py  test.py
test/dictfunc/: test_dict_match.py  test_dict_to_list.py  test_intersection.py  test_list_to_dict.py  test_prune.py
test/dotdict/: test_dd_dict_match.py  test_dd_prune.py
test/placeholder/: test_placeholder.py
