[project]
name = "template"
authors = [
  { name="Test Person", email="test.person@email.com"}]
description = "template"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
dynamic = ["version"]
package_dir = "src"
zip_safe = "True"
include_package_data = "True"

[options.packages.find]
where="src"
